--- a/classroom/src/app/scatterplot/scatterplot.component.html
+++ b/classroom/src/app/scatterplot/scatterplot.component.html
@@ -8,7 +8,7 @@
     >Units are average number of incidences per
     {{ unit }} words.</mat-card-subtitle
   >
-  <mat-card-content *ngIf="data && dictionary" class="scatter_container">
+  <mat-card-content class="scatter_container">
     <div class="axis_selection">
       <mat-label class="grid-item">X Axis: </mat-label>
       <mat-label class="grid-item">Y Axis: </mat-label>
@@ -25,24 +25,6 @@
         (selectedCategoryChange)="on_select_y($event)"
       ></app-category-select>
     </div>
-    <!-- category.id => name(category.id) -->
-    <google-chart
-      #scatterplot
-      *ngIf="scatter_data"
-      [title]="(x_axis?.label ?? 'X') + ' vs ' + (y_axis?.label ?? 'Y')"
-      [type]="chartType"
-      [columns]="[
-        x_category?.id ?? 'X',
-        y_category?.id ?? 'Y',
-        { type: 'string', role: 'id' },
-        { type: 'string', role: 'style' },
-        { type: 'string', role: 'tooltip' }
-      ]"
-      [data]="scatter_data"
-      (select)="select_point(scatterplot, $event)"
-      [options]="options"
-      [width]="chart_width"
-      [height]="chart_height"
-    ></google-chart>
+    <div #chart></div>
   </mat-card-content>
 </mat-card>
