--- a/classroom/src/styles.scss
+++ b/classroom/src/styles.scss
@@ -9,11 +9,20 @@
 //@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap');
 //@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
-@include mat.core();
+// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
+//  The following line adds:
+//    1. Default typography styles for all components
+//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
+//  If you specify typography styles for the components you use elsewhere, you should delete this line.
+//  If you don't need the default component typographies but still want the hierarchy styles,
+//  you can delete this line and instead use:
+//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
+@include mat.all-legacy-component-typographies();
+@include mat.legacy-core();
 
 //@import "@angular/material/prebuilt-themes/indigo-pink.css";
 @import 'cmu-app-theme';
-@include mat.all-component-themes($cmu-theme);
+@include mat.all-legacy-component-themes($cmu-theme);
 
 .cluster_id {
   background: $cmu-core-grey;
